external/qt-everywhere-opensource-src-5.9.1/qtscxml/tests/auto/parser/data/prematureEndOfDocument1.scxml.errors
:/tst_parser/data/prematureEndOfDocument1.scxml:2:0: error: Missing root element
