external/qt-everywhere-opensource-src-5.9.1/qtscxml/tests/auto/parser/data/prematureEndOfDocument1.scxml
<?xml version="1.0" encoding="UTF-8"?>
<!-- enable-qt-mode: yes m->
<scxml
    xmlns="http://www.w3.org/2005/07/scxml"
    version="1.0"
>
    <state id="anyplace">
    </state>
</scxml>
